Fixed some header spacing issues as well as menu selection opacity problems

--- a/waverly-inn/src/App.css
+++ b/waverly-inn/src/App.css
@@ -107,7 +107,7 @@ h6 {
 
 .menu-category {
   margin: 0 30px;
-  opacity: 50%;
+  opacity: 0.5;
   cursor: pointer;
 }
 
@@ -145,8 +145,9 @@ h6 {
   /* margin-bottom: -0.1em; */
 }
 
-.selected {
+.menu-category-selected {
   border-bottom: 4px solid black;
+  opacity: 1;
 }
 
 .rightSide{
@@ -161,19 +162,9 @@ h6 {
   line-height: 32px;
   margin-left: 40px;
 }
-
-
- .hours{
-   /* margin-top: 59px; */
-
- }
  
  .border{
   border-top: 1px solid darkgray;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
   max-width: 1300px;
   margin: 30px auto;
  }
@@ -190,9 +181,7 @@ h6 {
 .contactContainer > h4 {
   margin-top: 0;
 }
-/* .contactContainer > div{
 
-} */
 .contactLeft{
   width: 347px;
   height: 120px;
@@ -210,8 +199,6 @@ h6 {
    text-align: left
  }
  .PHour{
-  /* height:120px;
-  width:347px; */
   line-height: 20px;
   letter-spacing: 0px;
   text-align: left
@@ -331,7 +318,7 @@ footer {
 #hamburger-menu {
   display: none;
   position: fixed;
-  top: 50px;
+  top: 45px;
   width: 100%;
   height: 100%;
   background-color: white;
@@ -426,12 +413,24 @@ footer {
     top: 8px;
   }
   
+  .carousel img {
+    height: 40vh;
+    object-fit: cover;
+  }
+
   nav {
     justify-content: left;
+    width: 100%;
+    padding: 0;
   }
   .header-nav {
-    height: 30px;
-    padding: 10px;
+    height: 45px;
+  }
+  .logo-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .header-logo {
     width: initial;
